<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Reseplaneraren</string>

    <string name="title_activity_test">Reseplaneraren</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="Från">Från:</string>
    <string name="Till">Till:</string>
    <string name="search">Sök tihi</string>
    <string name="avg">Avg om: </string>
    <string name="nam">Tåget heter: </string>
    <string name="byt">Byten: </string>
    <string name="res">Restid: </string>
    <string name="det">Detaljer: </string>
    <string name="limbobimbo">Linjetyp: </string>
    <string name="ZonyEricsson">Antal zoner: </string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="courses">
        <item>KD323B-20151-K3522</item>
        <item>KD324A-20151-K3519</item>
        <item>KD109A-20151-52217</item>
    </string-array>

    <string-array name="qui">
        <item>Lund C, 81216</item>
        <item>Ystad Klostret, 86197</item>
        <item>Lund Bankgatan, 81156</item>
        <item>Malmö Triangeln, 80140</item>
        <item>Köpenhamn H, 45007</item>
        <item>Halmstad C, 13003</item>

    </string-array>
</resources>