<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#b5529bff">


    <TextView
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/det"
        android:id="@+id/tv_moment"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center|bottom">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/limbobimbo"
                        android:id="@+id/tv_start"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/ZonyEricsson"
                        android:layout_marginLeft="0dp"
                        android:id="@+id/tv_end"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res"
                        android:id="@+id/textView3"
                        android:paddingRight="30dp"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="linje"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="antalZ"
                        android:id="@+id/zone"
                        android:gravity="left"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="rees"
                        android:id="@+id/textView4"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

    </FrameLayout>

</LinearLayout>